Make sure the tests run on tomcat 7